# codex_auto

./: .gitattributes  .gitignore  .tmp_translation_cache.json  AGENTS.md  P1_IMPLEMENTATION_SUMMARY.md  README.ko.md  README.md  UI_FEATURES_KO.txt  UI_REDESIGN_ANALYSIS.md  WORKSPACE_LISTING_CACHE.json  build-desktop-release.ps1  emergency.py  gui_main.py  index.html  main.py  package-lock.json  pyproject.toml  registry.json  rr  run-terminal-bench.ps1  site.css  site.js  skills-lock.json  todo.md
.claude/: settings.json  settings.local.json
.jakal-flow-workspace/: WORKSPACE_LISTING_CACHE.json  bridge_perf.jsonl  job_scheduler.json  job_scheduler_events.jsonl  registry.json  registry_skips.jsonl  share_server_config.json
.tmp_codex_schema/: codex_app_server_protocol.v2.schemas.json
None/: public_tunnel.json  registry.json  share_server.json  share_server_config.json  share_session_events.jsonl  share_sessions.json
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: INTERACTIVE_CLI_REPORT.md  TERMINAL_BENCH.md
jakal-flow-logx/: README.md
logo/: App_icon  logo_invis_background
templates/: LONG_TERM_PLAN.sample.md
tests/: test_backend_primitives.py  test_bridge_server.py  test_codex_app_server.py  test_codex_runner.py  test_contract_wave.py  test_desktop_launcher.py  test_desktop_runtime_bundle.py  test_execution_control.py  test_execution_plan_helpers.py  test_failure_reporting.py  test_failure_summary_and_slug.py  test_git_ops.py  test_github_api.py  test_interactive_cli.py  test_lit_integration.py  test_optimization.py  (+12 more)
(+539 files in other folders)
