[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jakal-flow"
dynamic = ["version"]
description = "Production-oriented multi-repository Codex CLI orchestrator"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
jakal-flow = "jakal_flow.cli:main"
jakal-flow-ui-bridge = "jakal_flow.ui_bridge:main"
jakal-flow-desktop = "jakal_flow.desktop:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "jakal_flow._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"jakal_flow" = ["docs/*.txt", "docs/*.md", "*.sh"]

[tool.pytest.ini_options]
addopts = "--basetemp=.artifacts/pytest/tmp -p no:cacheprovider"
